--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -20,26 +20,38 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <!-- Add a link to the About Us page -->
       <li class="nav-item">
         <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
       </li>
-      <!-- Add a link to the Contact Us page -->
       <li class="nav-item">
         <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
       </li>
     </ul>
+    <!-- Update here to include login/logout links -->
+    {% if user.is_authenticated %}
+    <!-- If user is authenticated, show a welcome message and a logout button -->
+    <span class="navbar-text mr-2">
+      Welcome, {{ user.first_name|default:user.username }}
+    </span>
+    <form class="form-inline my-2 my-lg-0" action="{% url 'djangoapp:logout' %}" method="post">
+      {% csrf_token %}
+      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Sign Out</button>
+    </form>
+    {% else %}
+    <!-- If user is not authenticated, show login and signup buttons -->
+    <a class="btn btn-outline-primary my-2 my-sm-0 mr-2" href="{% url 'djangoapp:login' %}">Login</a>
+    <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'djangoapp:signup' %}">Signup</a>
+    {% endif %}
   </div>
 </nav>
 
 <div class="container">
   <!-- Add your content here -->
   This is the index page of your Django app!
-  <!-- Add a dealer table here -->
 </div>
 
 </body>
